# rs-sci

./: README.md
docs/: algorithm.md  algorithms.md  approx.md  approximate.md  constants.md  formula.md  hash.md  index.md  mp-integer.md  prime.md  random.md  rational.md  statistics.md  version.md
source/: CMakeLists.txt  rs-sci.hpp
source/rs-sci/: algorithm.hpp  algorithms.hpp  approx.cpp  approx.hpp  approximate.cpp  constants.hpp  formula.hpp  hash.cpp  hash.hpp  mp-integer.cpp  mp-integer.hpp  prime.hpp  random-continuous-distributions.hpp  random-discrete-distributions.hpp  random-engines.hpp  random-other-distributions.hpp  random-spatial-distributions.hpp  random.hpp  rational.cpp  rational.hpp  statistics.hpp  traits.hpp  version.hpp
source/test/: algorithm-test.cpp  algorithms-test.cpp  approx-arithmetic-test.cpp  approx-basic-test.cpp  approx-formatting-test.cpp  approx-functions-test.cpp  approx-parsing-test.cpp  approximate-test.cpp  constants-test.cpp  formula-test.cpp  hash-test.cpp  mp-integer-rational-arithmetic-test.cpp  mp-integer-rational-conversion-test.cpp  mp-integer-rational-test.cpp  mp-integer-sign-agnostic-test.cpp  mp-integer-signed-arithmetic-test.cpp  mp-integer-signed-conversion-test.cpp  mp-integer-signed-test.cpp  mp-integer-unsigned-arithmetic-test.cpp  mp-integer-unsigned-conversion-test.cpp  mp-integer-unsigned-test.cpp  prime-fixed-binary-test.cpp  prime-int-factors-test.cpp  prime-int-next-prev-test.cpp  prime-int-test.cpp  prime-mp-integer-test.cpp  prime-test.cpp  random-adapter-test.cpp  random-continuous-test.cpp  random-discrete-test.cpp  random-hash-test.cpp  random-lcg-test.cpp  random-non-arithmetic-test.cpp  random-pcg-test.cpp  random-spatial-test.cpp  random-test.cpp  random-xoshiro-test.cpp  rational-test.cpp  statistics-test.cpp  unit-test.cpp  (+1 more)
